[gd_scene load_steps=14 format=3 uid="uid://cfalb86rkfe7j"]

[ext_resource type="Script" path="res://entities/entity.gd" id="1_xlac5"]
[ext_resource type="Resource" uid="uid://c2pjf5xvmn3fx" path="res://entities/abilities/bigboy/bigboy_properties.tres" id="2_ai8su"]
[ext_resource type="PackedScene" uid="uid://bomuyhrqncppr" path="res://entities/abilities/bigboy/bigboy_movement_component.tscn" id="3_ng8v8"]
[ext_resource type="PackedScene" uid="uid://l2d48ke1tab6" path="res://entities/components/animation_component.tscn" id="4_8pndw"]
[ext_resource type="Texture2D" uid="uid://d2isyc0t8sklm" path="res://assets/munchkin/munchkin.png" id="5_k3f4j"]
[ext_resource type="AnimationLibrary" uid="uid://n7eqhsgy7kxq" path="res://assets/munchkin/munchkin.tres" id="6_po7ch"]
[ext_resource type="PackedScene" uid="uid://vntl2dpqvd7j" path="res://entities/components/health_component.tscn" id="7_udc5r"]
[ext_resource type="PackedScene" uid="uid://bmjdup2xe0q0x" path="res://entities/components/lifetime_component.tscn" id="8_c3yp4"]
[ext_resource type="PackedScene" uid="uid://djg3fqugilgl5" path="res://entities/components/hurtbox_component.tscn" id="9_6m6re"]
[ext_resource type="PackedScene" uid="uid://bdmftonryvchu" path="res://entities/components/hitbox_component.tscn" id="10_wnejx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gt25s"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_qkgwp"]
radius = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qrmcx"]
size = Vector2(32, 16)

[node name="BigBoy" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_xlac5")
properties = ExtResource("2_ai8su")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gt25s")
debug_color = Color(0, 0.6, 0.7, 0.2)

[node name="MovementComponent" parent="." instance=ExtResource("3_ng8v8")]

[node name="AnimationComponent" parent="." instance=ExtResource("4_8pndw")]
scale = Vector2(2, 2)

[node name="Sprite" parent="AnimationComponent" index="0"]
texture = ExtResource("5_k3f4j")
hframes = 7
vframes = 6

[node name="Player" parent="AnimationComponent" index="1"]
libraries = {
"": ExtResource("6_po7ch")
}

[node name="HealthComponent" parent="." instance=ExtResource("7_udc5r")]
stun_time = 0.2

[node name="LifetimeComponent" parent="." instance=ExtResource("8_c3yp4")]

[node name="HurtboxComponent" parent="." instance=ExtResource("9_6m6re")]
collision_mask = 16
priority = 1.0

[node name="Collision" parent="HurtboxComponent" index="0"]
shape = SubResource("CircleShape2D_qkgwp")

[node name="HitboxComponent" parent="." instance=ExtResource("10_wnejx")]
position = Vector2(0, 8)
collision_layer = 4
priority = 2.0

[node name="Collision" parent="HitboxComponent" index="0"]
shape = SubResource("RectangleShape2D_qrmcx")

[editable path="AnimationComponent"]
[editable path="HurtboxComponent"]
[editable path="HitboxComponent"]
